--- a/Vine_Review_Analysis.ipynb
+++ b/Vine_Review_Analysis.ipynb
@@ -164,6 +164,32 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "vine_df.describe()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DwuOzQnIqLq4",
+        "outputId": "3aa19827-15d4-4298-ff50-e66f951d66c1"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "DataFrame[summary: string, review_id: string, star_rating: string, helpful_votes: string, total_votes: string, vine: string, verified_purchase: string]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "1. Filter the data and create a new DataFrame or table to retrieve all the rows where the total_votes count is equal to or greater than 20 to pick reviews that are more likely to be helpful and to avoid having division by zero errors later on."
@@ -430,9 +456,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gFK_NVHnrUrp",
-        "outputId": "0581b367-d343-4c0e-d381-ea7c2004e2eb"
+        "outputId": "bbb7be5e-f6fc-4082-cf43-558271770ef1"
       },
-      "execution_count": 7,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -454,26 +480,28 @@
     {
       "cell_type": "code",
       "source": [
-        "9+34+16+1"
+        "total_reviews = groupped_vine_members.agg({'count(star_rating)': 'sum'}).show()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "dN8w3i84leAP",
-        "outputId": "3a318118-cac4-462b-d326-79862c8477c9"
+        "id": "FfcYQLYpNCT4",
+        "outputId": "bc78c12a-b899-41ff-a428-c2ceb8725af1"
       },
-      "execution_count": 11,
+      "execution_count": 46,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "60"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 11
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+-----------------------+\n",
+            "|sum(count(star_rating))|\n",
+            "+-----------------------+\n",
+            "|                     60|\n",
+            "+-----------------------+\n",
+            "\n"
+          ]
         }
       ]
     },
@@ -586,26 +614,28 @@
     {
       "cell_type": "code",
       "source": [
-        "1532+1292+8212+2687+754"
+        "total_reviews_non = groupped_non_vine_members.agg({'count(star_rating)': 'sum'}).show()"
       ],
       "metadata": {
-        "id": "NgcN-DeJq6Ba",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6cdfaa45-3821-4dcc-810f-d3a72c86cdf6"
+        "id": "B7X9Raz_OAH-",
+        "outputId": "18141cdc-810c-4e04-b1f3-63bd4a1b4981"
       },
-      "execution_count": 19,
+      "execution_count": 49,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "14477"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 19
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+-----------------------+\n",
+            "|sum(count(star_rating))|\n",
+            "+-----------------------+\n",
+            "|                  14477|\n",
+            "+-----------------------+\n",
+            "\n"
+          ]
         }
       ]
     },
